570_ingress_preserve_source_ip/1-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: jelledruyts/inspectorgadget
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: LoadBalancer # ClusterIP
  externalTrafficPolicy: Cluster # Local
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: webapp
